Thu Jun  5 11:07:04 2003  Chad Elliott  <elliott_c@ociweb.com>

        * bin/MakeProjectCreator/modules/WorkspaceCreator.pm:

          Fixed a bug where mwc.pl could go into an infinite loop depending
          on the project dependencies and project ordering.

Thu Jun  5 09:05:21 2003  Chad Elliott  <elliott_c@ociweb.com>

        * bin/MakeProjectCreator/config/global.features:

          Fixed a bad comment.

Thu Jun  5 08:20:23 2003  Chad Elliott  <elliott_c@ociweb.com>

        * bin/MakeProjectCreator/README:
        * bin/MakeProjectCreator/modules/ProjectCreator.pm:
        * bin/MakeProjectCreator/templates/bor.mpd:
        * bin/MakeProjectCreator/templates/em3vcp.mpd:
        * bin/MakeProjectCreator/templates/gnu.mpd:
        * bin/MakeProjectCreator/templates/make.mpd:
        * bin/MakeProjectCreator/templates/nmake.mpd:
        * bin/MakeProjectCreator/templates/va4icc.mpd:
        * bin/MakeProjectCreator/templates/vc6dsp.mpd:
        * bin/MakeProjectCreator/templates/vc7.mpd:

          Added a 'macros' keyword that allows users to pass generic macros
          to the compiler.

Thu Jun  5 07:05:42 2003  Chad Elliott  <elliott_c@ociweb.com>

        * bin/clean_sems.sh:

          Update this script to work with IRIX, Tru64 and HP-UX and possibly
          others.

Thu Jun  5 03:45:46 UTC 2003  Don Hinton  <dhinton@dresystems.com>

        * include/makeinclude/wrapper_macros.GNU:
          Set shared_libs_only or static_libs_only if appropriate,
          even if only shared_libs and static_libs were passed, since
          many Makefiles use these variables to determine what gets built.

        * netsvcs/clients/Naming/Client/Makefile:
          Fixed problem that prevented static libraries from being built
          by adding a LIB variable and moving these declarations to before
          including wrapper_macros.GNU.  Thanks to Olli Savia <ops@iki.fi>
          for reporting the problem.
